--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 //import sections
 @use 'sections/navbar';
 @use 'sections/hero';
+@use 'sections/clients';
 @use 'sections/services';
 @use 'sections/whyChoose';
 @use 'sections/counter';
