--- a/scss/sections/_letscus.scss
+++ b/scss/sections/_letscus.scss
@@ -6,6 +6,7 @@
     position: absolute;
     top: 50%;
     transform: translate(45%,-50%) rotate(-90deg);
+    flex-wrap: nowrap !important;
 
 }
 
