--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11386,18 +11386,6 @@ textarea.form-control-lg {
   font-size: 14px;
 }
 
-@media (min-width: 768px) {
-  .contafakebg-csoz {
-    background: linear-gradient(to right, #3E3E3E 50%, transparent 0%);
-  }
-}
-
-@media (min-width: 768px) {
-  .contafakebgrg-csoz {
-    background: linear-gradient(to left, #3E3E3E 50%, transparent 0%);
-  }
-}
-
 .imgcontainer-csoz {
   width: 80%;
 }
@@ -11409,6 +11397,7 @@ textarea.form-control-lg {
 
 .bgimg-csoz {
   width: 180px;
+  bottom: -75px;
 }
 @media (max-width: 767.98px) {
   .bgimg-csoz {
