--- a/scss/sections/aboutus_page/_abouthero.scss
+++ b/scss/sections/aboutus_page/_abouthero.scss
@@ -1,8 +1,49 @@
 @use '../../custom' as *;
 
 .abbg-csoz{
-    @include media-breakpoint-down(lg){
-        background: none;
+
+    background: url(../../assets/img/about.png)  no-repeat center;
+    background-size: cover;
+}
+.borderc-csoz{
+    position: absolute;
+    top: 80%;
+    left: 0%;
+    width: 120px;
+    height: 15px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: $primary;
+
+    &:after{
+        content: '';
+        position: absolute;
+        bottom: 6%;
+        right: 1%;
+        width: 12px;
+        height: 12px;
+        background-color: #fff;
+        border-radius: 50%;
     }
-    background: url(../../../assets/img/about.png) no-repeat right center;
+}
+.borderca-csoz{
+    position: absolute;
+    top: 80%;
+    right: 0%;
+    width: 120px;
+    height: 15px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    background-color: $primary;
+
+    &:after{
+        content: '';
+        position: absolute;
+        bottom: 4%;
+        left: 2%;
+        width: 12px;
+        height: 12px;
+        background-color: #fff;
+        border-radius: 50%;
+    }
 }
