--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11072,7 +11072,7 @@ textarea.form-control-lg {
 
 @media (max-width: 575.98px) {
   .clients-csoz {
-    border-bottom: 1px solid #818181;
+    border-bottom: 1px solid rgba(129, 129, 129, 0.231372549);
   }
 }
 
@@ -11087,8 +11087,8 @@ textarea.form-control-lg {
 }
 @media (max-width: 575.98px) {
   .serives-csoz {
-    padding-top: 50px !important;
-    padding-bottom: 50px !important;
+    padding-top: 100px !important;
+    padding-bottom: 100px !important;
   }
 }
 @media (max-width: 767.98px) {
@@ -11223,14 +11223,35 @@ textarea.form-control-lg {
   right: 0;
 }
 
+.bordebd-csoz {
+  position: relative;
+}
+@media (max-width: 575.98px) {
+  .bordebd-csoz:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 70%;
+    height: 2px;
+    background-color: #2e2b45;
+    transform: translateX(-50%);
+  }
+}
+@media (min-width: 576px) {
+  .bordebd-csoz h5 {
+    font-size: 1rem !important;
+  }
+}
+
 .worksec-csoz {
   padding-top: 200px;
   padding-bottom: 80px;
 }
 @media (max-width: 767.98px) {
   .worksec-csoz {
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 100px;
+    padding-bottom: 100px;
   }
 }
 .worksec-csoz .content {
