--- a/scss/sections/_clients.scss
+++ b/scss/sections/_clients.scss
@@ -2,7 +2,7 @@
 
 .clients-csoz{
     @include media-breakpoint-down(sm){
-        border-bottom: 1px solid $darkfont;
+        border-bottom: 1px solid #8181813b;
     }
 
 }
