--- a/scss/sections/_counter.scss
+++ b/scss/sections/_counter.scss
@@ -1,4 +1,29 @@
+@use '../custom' as *;
 .counterimg-csoz{
     top: 0;
     right: 0;
+}
+
+//counter element border
+.bordebd-csoz{
+    position: relative;
+
+    @include media-breakpoint-down(sm){
+
+        &:after{
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            width: 70%;
+            height: 2px;
+            background-color: #2e2b45;
+            transform: translateX(-50%);
+        }
+    }
+    @include media-breakpoint-up(sm){
+        h5{
+            font-size: 1rem !important;
+        }
+    }
 }
