--- a/scss/sections/_services.scss
+++ b/scss/sections/_services.scss
@@ -1,71 +1,81 @@
 @use '../custom' as *;
 
-.serrow-csoz{
+.serrow-csoz {
     margin-bottom: 32px;
 }
-.serives-csoz{
-    @include media-breakpoint-down(sm){
+
+.serives-csoz {
+    @include media-breakpoint-down(sm) {
         padding-top: 100px !important;
         padding-bottom: 100px !important;
     }
+
     position: relative;
     padding-top: 100px !important;
     padding-bottom: 100px !important;
-    
-    .content{
-        @include media-breakpoint-down(md){
+
+    .content {
+        @include media-breakpoint-down(md) {
             width: 100% !important;
         }
-        h1{
+
+        h1 {
             font-size: 36px;
             margin-bottom: 32px;
         }
     }
 
+    .colani-gsp {
+        z-index: 1;
+    }
 
-    .card-csoz{
+    .card-csoz {
         position: relative;
         text-align: center;
         background-color: #fff;
         padding-top: 60px !important;
         transition: 0.3s ease-in-out;
         z-index: 1;
-        .img-co{
+
+        .img-co {
             width: 78px;
             height: 78px;
             margin: 0 auto;
             margin-bottom: 40px;
         }
-        h5{
+
+        h5 {
             margin-bottom: 25px;
             font-size: 18px;
             font-weight: 700;
         }
-        p{
+
+        p {
             font-size: 14px;
             font-weight: 500;
             line-height: 18px;
             color: #484848;
             margin-bottom: 25px;
         }
-        a{
+
+        a {
             text-decoration: none;
             font-size: 12px;
             color: #18315B;
 
         }
 
-        svg{
+        svg {
             width: 100%;
             height: 100%;
-            
-            path{
+
+            path {
                 transition: 0.3s ease;
 
             }
         }
-        
-        &:after{
+
+        &:after {
             content: '';
             position: absolute;
             bottom: -1px;
@@ -73,46 +83,50 @@
             height: 10px;
             width: 100%;
             background-color: $primary;
-            border-bottom-right-radius: 5px; 
-            border-bottom-left-radius: 5px; 
+            border-bottom-right-radius: 5px;
+            border-bottom-left-radius: 5px;
             opacity: 0;
             transition: 0.5s ease-in-out;
         }
-        &:hover{
+
+        &:hover {
             box-shadow: 0px 5px 17px 0px rgb(0 0 0 / 25%);
 
-            &:after{
+            &:after {
                 opacity: 1;
             }
 
-            svg{
-                path{
+            svg {
+                path {
                     fill: $primary;
 
                 }
             }
 
-            a{
+            a {
                 color: $primary;
             }
         }
     }
-    .section-image-csoz{
+
+    .section-image-csoz {
         position: absolute;
         top: 0;
         right: 1%;
     }
 
 }
+
 //services section
-.services-section{
+.services-section {
     position: relative;
-    
+
     //light red box behind the content
-    &:after{
-        @include media-breakpoint-down(sm){
+    &:after {
+        @include media-breakpoint-down(sm) {
             display: none;
         }
+
         content: '';
         position: absolute;
         bottom: 0;
@@ -124,7 +138,7 @@
         border-bottom-left-radius: 40px;
     }
 
-    .botsec-csoz{
+    .botsec-csoz {
         position: absolute;
         bottom: -3%;
         left: 0;
