added css floating animaiton

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10793,6 +10793,23 @@ textarea.form-control-lg {
   box-shadow: none;
 }
 
+@keyframes floating {
+  0% {
+    transform: translate(0%, 0%);
+  }
+  25% {
+    transform: translate(-2%, -2%);
+  }
+  50% {
+    transform: translate(2%, 2%);
+  }
+  75% {
+    transform: translate(5%, -3%);
+  }
+  100% {
+    transform: translate(0%, 0%);
+  }
+}
 .navcolor-csoz {
   background-color: #fff;
   box-shadow: 0px 0px 20px 0px #c7c0c0;
@@ -11195,6 +11212,7 @@ textarea.form-control-lg {
   position: absolute;
   bottom: -3%;
   left: 0;
+  animation: floating 8s linear infinite;
 }
 
 .choose-csoz {
@@ -11344,6 +11362,7 @@ textarea.form-control-lg {
   top: 15%;
   left: 0;
   z-index: -1;
+  animation: floating 10s linear infinite;
 }
 
 .csbtn-csoz {
