--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 // import components
 @use 'components/button';
 @use 'components/mixins';
+@use 'components/animation';
 
 //import sections
 @use 'sections/navbar';
