--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10810,6 +10810,23 @@ textarea.form-control-lg {
     transform: translate(0%, 0%);
   }
 }
+@keyframes floatingY {
+  0% {
+    transform: translate(0%, 0%);
+  }
+  25% {
+    transform: translate(-2%, -2%);
+  }
+  50% {
+    transform: translate(0%, 2%);
+  }
+  75% {
+    transform: translate(0%, -3%);
+  }
+  100% {
+    transform: translate(0%, 0%);
+  }
+}
 .navcolor-csoz {
   background-color: #fff;
   box-shadow: 0px 0px 20px 0px #c7c0c0;
@@ -11441,11 +11458,13 @@ textarea.form-control-lg {
 .boexes3-csoz {
   top: 3%;
   left: 0;
+  animation: floating 8s linear infinite;
 }
 
 .bgimg-csoz {
   width: 180px;
   bottom: -75px;
+  z-index: 1;
 }
 @media (max-width: 767.98px) {
   .bgimg-csoz {
@@ -11457,6 +11476,8 @@ textarea.form-control-lg {
   top: 0;
   right: 0;
   transform: translateY(-40%);
+  z-index: 1;
+  animation: floatingY 8s linear infinite;
 }
 @media (max-width: 767.98px) {
   .bgtpimg-csoz {
