--- a/scss/components/_animation.scss
+++ b/scss/components/_animation.scss
@@ -17,3 +17,21 @@
         transform: translate(0%, 0%);
     }
 }
+@keyframes floatingY{
+    0%{
+        transform: translate(0%, 0%);
+    }
+    25%{
+
+        transform: translate(-2%, -2%);
+    }
+    50%{
+        transform: translate(0%, 2%);
+    }
+    75%{
+        transform: translate(0%, -3%);
+    }
+    100%{
+        transform: translate(0%, 0%);
+    }
+}
