--- a/scss/sections/services_page/_sections.scss
+++ b/scss/sections/services_page/_sections.scss
@@ -8,6 +8,7 @@
 .boexes3-csoz{
     top: 3%;
     left: 0;
+    animation: floating 8s linear infinite;
 }
 
 //background image section bottom
@@ -17,6 +18,8 @@
     }
     width: 180px;
     bottom: -75px;
+    z-index: 1;
+    
 }
 //background top image section bottom
 .bgtpimg-csoz{
@@ -26,4 +29,6 @@
    top: 0;
    right: 0;
    transform: translateY(-40%);
+   z-index: 1;
+   animation: floatingY 8s linear infinite;
 }
