--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10827,6 +10827,22 @@ textarea.form-control-lg {
     transform: translate(0%, 0%);
   }
 }
+@keyframes scrollmouse {
+  0% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(2px);
+  }
+}
+@keyframes scrolling {
+  0% {
+    transform: translateY(0px) scale(1);
+  }
+  100% {
+    transform: translateY(10px) scale(1.3);
+  }
+}
 .navcolor-csoz {
   background-color: #fff;
   box-shadow: 0px 0px 20px 0px #c7c0c0;
@@ -11102,6 +11118,19 @@ textarea.form-control-lg {
   transform: rotate(270deg) translateX(-25px);
   font-size: 14px;
   color: #818181;
+}
+.scroll-csoz svg {
+  overflow: visible;
+}
+.scroll-csoz svg #Group_638 {
+  animation: scrollmouse 1.5s linear infinite alternate-reverse;
+}
+.scroll-csoz svg #Subtract_2 {
+  animation: scrollmouse 1.5s linear infinite alternate-reverse;
+}
+.scroll-csoz svg #Subtract {
+  transform-origin: bottom;
+  animation: scrolling 1.5s ease-in-out infinite alternate-reverse;
 }
 
 @media (max-width: 575.98px) {
