--- a/scss/components/_animation.scss
+++ b/scss/components/_animation.scss
@@ -35,3 +35,21 @@
         transform: translate(0%, 0%);
     }
 }
+
+// mouse animation
+@keyframes scrollmouse{
+    0%{
+        transform: translateY(0px);
+    }
+    100%{
+        transform: translateY(2px);
+    }
+}
+@keyframes scrolling{
+    0%{
+        transform: translateY(0px) scale(1);
+    }
+    100%{
+        transform: translateY(10px) scale(1.3);
+    }
+}
