--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11676,4 +11676,30 @@ textarea.form-control-lg {
   }
 }
 
+.colbr-csoz {
+  border-left: 1px solid #666363;
+  padding: 20px 0;
+}
+@media (max-width: 767.98px) {
+  .colbr-csoz {
+    padding: 20px 10px;
+  }
+}
+.colbr-csoz .typerow-csoz {
+  width: 100%;
+}
+.colbr-csoz .typerow-csoz h6:first-child {
+  background-color: #221D3A;
+  padding: 8px 15px;
+  width: 50%;
+}
+@media (max-width: 575.98px) {
+  .colbr-csoz .typerow-csoz h6:first-child {
+    width: 100%;
+  }
+}
+.colbr-csoz .typerow-csoz h6:nth-child(2) {
+  padding: 8px 15px;
+}
+
 /*# sourceMappingURL=main.css.map */
