--- a/scss/sections/portfolio_page/_tabsbar.scss
+++ b/scss/sections/portfolio_page/_tabsbar.scss
@@ -6,3 +6,26 @@
     }
     color: $altlight;
 }
+
+.colbr-csoz{
+    border-left: 1px solid #666363;
+    padding: 20px 0;
+    @include media-breakpoint-down(md){
+        padding: 20px 10px;
+    }
+    .typerow-csoz{
+        width: 100%;
+        
+        h6:first-child{
+            @include media-breakpoint-down(sm){
+                width: 100%;
+            }
+            background-color: #221D3A;
+            padding: 8px 15px;
+            width: 50%;
+        }
+        h6:nth-child(2){
+            padding: 8px 15px;
+        }
+    }
+}
