--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10899,13 +10899,11 @@ textarea.form-control-lg {
 }
 
 .navbar-toggler {
-  padding: 0.25rem;
-  background-color: #C00815;
-  padding: 13px 19px;
+  padding: 0;
   border-radius: 0;
   color: #fff !important;
-  font-size: 16px;
   font-weight: 700;
+  border: none;
 }
 
 .navbar-toggler-icon {
@@ -10938,7 +10936,7 @@ textarea.form-control-lg {
   }
   .navside-csoz ul li {
     text-align: center;
-    padding: 15px 0 !important;
+    padding: 10px 0 !important;
   }
 }
 
