--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -55,13 +55,11 @@
     }
 }
 .navbar-toggler{
-    padding: 0.25rem;
-    background-color: $primary;
-    padding: 13px 19px;
+    padding: 0;
     border-radius: 0;
     color: $light !important;
-    font-size: 16px;
     font-weight: 700;
+    border: none;
     
 }
 .navbar-toggler-icon{
@@ -94,7 +92,7 @@
     
         li{
             text-align: center;
-            padding: 15px 0 !important;
+            padding: 10px 0 !important;
         }
     }
     }
