--- a/scss/sections/_ourwork.scss
+++ b/scss/sections/_ourwork.scss
@@ -54,3 +54,10 @@
     right: 0;
     text-align: right;
 }
+
+// responsive grid
+.rescour-csoz{
+    @include media-breakpoint-down(sm){
+        display: block !important;
+    }
+}
