--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11407,6 +11407,11 @@ textarea.form-control-lg {
   padding-top: 100px;
   padding-bottom: 100px;
 }
+@media (max-width: 575.98px) {
+  .carousel-csoz {
+    padding-top: 50px;
+  }
+}
 .carousel-csoz .client-content-csoz {
   z-index: 1;
 }
