--- a/scss/sections/_ourtestimonials.scss
+++ b/scss/sections/_ourtestimonials.scss
@@ -25,6 +25,9 @@
     height: 130px;
 }
 .carousel-csoz{
+    @include media-breakpoint-down(sm){
+        padding-top: 50px;
+    }
     padding-top: 100px;
     padding-bottom: 100px;
     
