changed hero image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11049,6 +11049,8 @@ textarea.form-control-lg {
   transform: translate(46%, -50%);
 }
 .box .abimage-csoz {
+  width: 313px;
+  height: 607px;
   position: absolute;
   top: 55%;
   left: -50%;
