--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -103,6 +103,8 @@
         transform: translate(46%,-50%);
     }
     .abimage-csoz{
+        width: 313px;
+        height: 607px;
         position: absolute;
         top: 55%;
         left: -50%;
