--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -88,7 +88,7 @@
         margin-left: auto;
         max-width: 250px;
         height: 100%;
-        background-color: $light;
+        background-color: #fdfdfd;
     
         li{
             text-align: center;
