--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -89,6 +89,7 @@
         max-width: 250px;
         height: 100%;
         background-color: #fdfdfd;
+        box-shadow: -1px 0px 20px 0px #c7c0c0;
     
         li{
             text-align: center;
