--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10907,8 +10907,7 @@ textarea.form-control-lg {
 }
 
 .navbar-toggler-icon {
-  width: 1.5625rem;
-  height: 1.5625rem;
+  background-image: url(../../assets/img/list.svg) !important;
 }
 
 .navbar-toggler:focus {
