--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -63,12 +63,12 @@
     
 }
 .navbar-toggler-icon{
-    width: 1.5625rem;
-    height: 1.5625rem;
+    background-image: url(../../assets/img/list.svg) !important;
 }
 .navbar-toggler:focus{
     box-shadow: none ;
 }
+
 
 .navside-csoz{
     @include media-breakpoint-down(lg){
