--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -64,6 +64,8 @@
 }
 .navbar-toggler-icon{
     background-image: url(../../assets/img/list.svg) !important;
+    width: 2rem;
+    height: 2rem;
 }
 .navbar-toggler:focus{
     box-shadow: none ;
